<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/category_function_title">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="flick_input_only_preference"
            android:summaryOff="@string/flick_input_only_summary_off"
            android:summaryOn="@string/flick_input_only_summary_on"
            android:title="@string/flick_input_only_title" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="flick_sensitivity_preference"
            android:max="200"
            android:title="@string/flick_sensitivity_title"
            app:min="1"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true" />

        <Preference
            android:key="long_press_timeout_preference"
            android:summary="@string/long_press_timeout_preference_summary"
            android:title="@string/long_press_timeout_preference_title" />

        <SeekBarPreference
            android:defaultValue="1000"
            android:dependency=""
            android:key="time_same_pronounce_typing_preference"
            android:max="1000"
            android:title="@string/time_same_pronounce_typing_title"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/time_same_pronounce_typing_summary" />

        <SwitchPreferenceCompat
            android:key="save_last_used_keyboard"
            android:title="@string/save_last_used_keyboard_title"
            app:defaultValue="false"
            app:summary="@string/save_last_used_keyboard_summey" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_category_operation_keys_title">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="delete_key_flick_left_preference"
            android:summary="@string/delete_key_left_summary"
            android:title="@string/delete_key_left_flick_title" />

        <Preference
            android:dependency="delete_key_flick_left_preference"
            android:key="delete_key_flick_left_targets_preference"
            android:summary="@string/delete_key_flick_targets_summary"
            android:title="@string/delete_key_flick_targets_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="delete_key_flick_up_preference"
            android:summary="@string/delete_key_up_summary"
            android:title="@string/delete_key_up_flick_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="delete_key_flick_down_preference"
            android:summary="@string/delete_key_down_summary"
            android:title="@string/delete_key_down_flick_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="undo_enable_preference"
            android:summary="@string/undo_enable_summary"
            android:title="@string/undo_enable_title" />

        <Preference
            android:key="cursor_move_after_commit_target_pairs_preference"
            android:summary="@string/cursor_move_target_pairs_summary"
            android:title="@string/cursor_move_target_pairs_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="conversion_key_swipe_cursor_move_preference"
            android:summary="@string/pref_summary_space_longpress_cursor"
            android:title="@string/pref_title_space_longpress_cursor" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="space_key_preference"
            android:summary="@string/space_key_summary"
            android:title="@string/space_key_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="custom_direct_mode_space_hankaku_preference"
            android:summary="@string/custom_direct_mode_space_hankaku_summary"
            android:title="@string/custom_direct_mode_space_hankaku_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_vibration_title">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vibration_preference"
            android:summaryOff="@string/vibration_summary_off"
            android:summaryOn="@string/vibration_summary_on"
            android:title="@string/vibration_title" />

        <ListPreference
            android:defaultValue="@string/vibration_default"
            android:dependency="vibration_preference"
            android:dialogTitle="@string/vibration_timing_dialog_title"
            android:entries="@array/vibration_options"
            android:entryValues="@array/vibration_values"
            android:key="vibration_timing"
            android:summary="@string/vibration_timing_summary"
            android:title="@string/vibration_timing_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_sound_preference"
            android:summaryOff="@string/key_sound_summary_off"
            android:summaryOn="@string/key_sound_summary_on"
            android:title="@string/key_sound_title" />

        <SeekBarPreference
            android:defaultValue="0"
            android:dependency="key_sound_preference"
            android:key="key_sound_volume_percent_preference"
            android:max="100"
            android:title="@string/key_sound_volume_title"
            app:min="0"
            app:showSeekBarValue="true"
            app:summary="@string/key_sound_volume_summary" />

    </PreferenceCategory>

</PreferenceScreen>
